# AgentFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  orchestrator.py  roles.py
backend/: README.md  __init__.py
backend/app/: __init__.py  main.py  schemas.py
configs/: default.yaml
datasets/: README.md  benchmark_sample.jsonl
docs/: application-form-answers.md  architecture.md
evaluation/: __init__.py  metrics.py  runner.py
experiments/task_router/: README.md
frontend/: README.md
rag/: __init__.py  ingestion.py  retriever.py
tests/: test_metrics.py
